# zdata

./: .gitignore  IMPROVEMENTS_ANALYSIS.md  INDEXING_IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  __init__.py  _settings.py  cibw.toml  examples_settings.py  publish.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
build_zdata/: align_mtx.py  build_x.py  build_zdata.py  check_directory.py  concat_obs.py
core/: __init__.py  build_zdata.py  index.py  read_out.py  utils.py  zdata.py
ctools/: mtx_to_zdata  mtx_to_zdata.c  zdata_read  zdata_read.c
files/: __init__.py
preproc/: align_mtx.py
scripts/: build_zstd.sh
test_zdata/: metadata.json  obs.parquet  var.parquet
tests/: README.md  check_x_rm.py  conftest.py  profile_x_cm_queries.py  profile_x_rm_queries.py  profile_zdata.py  run_tests.sh  test_fast_queries.py  test_full_pipeline.py  test_full_pipeline_at_scale.py  test_output.py  test_parameter_sweep.py  test_random_rows.py
tests/h5ad_test_dir/: obs_report.csv
tests/test_core/: __init__.py  test_check_directory.py  test_ctools.py  test_h5ad.py  test_obs_wrapper.py  test_zdata.py
tests/test_index/: __init__.py  test_normalize_indices.py
tests/zarr_test_dir/: obs_report.csv
tests/zarr_test_dir/31273297_test.zarr/: .zmetadata
tests/zarr_test_dir/31273297_test.zarr/X/: .zattrs
tests/zarr_test_dir/31273297_test.zarr/X/data/: .zarray  0  1  2  3
tests/zarr_test_dir/31273297_test.zarr/X/indices/: .zarray  0  1  2  3
tests/zarr_test_dir/31273297_test.zarr/X/indptr/: .zarray  0
tests/zarr_test_dir/31273297_test.zarr/obs/: .zattrs
tests/zarr_test_dir/31273297_test.zarr/obs/Count/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/DiseaseState/: .zarray
tests/zarr_test_dir/31273297_test.zarr/obs/_index/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/barcode/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/included_scref_train/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/nCount_RNA/: .zarray  0
tests/zarr_test_dir/31273297_test.zarr/obs/nFeature_RNA/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/nnz/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/percent.mt/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/sample_idx/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/seurat_clusters/: 0
tests/zarr_test_dir/31273297_test.zarr/obs/soma_joinid/: 0
tests/zarr_test_dir/31273297_test.zarr/uns/encoding-type/: 0
tests/zarr_test_dir/31273297_test.zarr/uns/encoding-version/: 0
tests/zarr_test_dir/31273297_test.zarr/var/_index/: .zarray  0
tests/zarr_test_dir/31273297_test.zarr/var/soma_joinid/: .zarray  0  1
tests/zarr_test_dir/33173058_test.zarr/: .zmetadata
tests/zarr_test_dir/33173058_test.zarr/X/data/: .zarray  0  1  2  3
tests/zarr_test_dir/33173058_test.zarr/X/indices/: .zarray  0  1  2  3
tests/zarr_test_dir/33173058_test.zarr/X/indptr/: 0
tests/zarr_test_dir/33173058_test.zarr/obs/: .zattrs
tests/zarr_test_dir/33173058_test.zarr/obs/barcode/: 0
tests/zarr_test_dir/33173058_test.zarr/obs/included_scref_train/: .zarray
tests/zarr_test_dir/33173058_test.zarr/obs/nnz/: 0
tests/zarr_test_dir/33173058_test.zarr/obs/sample_idx/: 0
tests/zarr_test_dir/33173058_test.zarr/obs/soma_joinid/: 0
tests/zarr_test_dir/33907320_test.zarr/: .zmetadata
tests/zarr_test_dir/34792289_test.zarr/: .zmetadata
tests/zarr_test_dir/34792289_test.zarr/X/: .zattrs
tests/zarr_test_dir/35504286_test.zarr/: .zmetadata
tests/zarr_test_dir/35504286_test.zarr/var/: .zattrs
(+124 files in other folders)
