[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zdata"
version = "0.1.0"
description = "Efficient storage and access for large single-cell RNA datasets"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "polars>=0.18.0",
    "pandas>=1.3.0",
    "anndata>=0.8.0",
    "zarr>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zdata*"]

