[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Minimal project section - all metadata is defined in setup.py
[project]
name = "zdata-py"
dynamic = ["version", "description", "readme", "requires-python", "license", "authors", "classifiers", "dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["zdata", "zdata.core", "zdata.build_zdata", "zdata.ctools", "zdata.files"]

[tool.setuptools.package-data]
zdata = ["ctools/*.c", "ctools/mtx_to_zdata*", "ctools/zdata_read*", "files/2ks10c_genes.txt"]

