[metadata]
name = zdata
version = 0.1.0
description = Efficient storage and access for large single-cell RNA datasets
long_description = file: README.md
long_description_content_type = text/markdown
author = 
author_email = 
url = 
license = 
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    polars>=0.18.0
    pandas>=1.3.0
    anndata>=0.8.0
    zarr>=2.10.0

[options.packages.find]
exclude =
    tests*

[options.package_data]
zdata = ctools/*.c

